apps/monitoring/victorialogs/components/istio/istio-virtualservice.yaml
---
apiVersion: "networking.istio.io/v1beta1"
kind: "VirtualService"
metadata:
  name: "victorialogs"
spec:
  hosts:
    - "victorialogs"
  gateways:
    - "istio-system/gateway"
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: "victorialogs"
            port:
              number: 80
